feat: hero styles and structure html

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -15,6 +15,9 @@ body {
   --complementary-color: #4a6572;
 
   --black-light: #1c1b1b;
+  --black-dark: #0a0909;
+
+  --gray-100: #444444;
 }
 
 .container {
@@ -22,16 +25,18 @@ body {
   height: 100vh;
 }
 
-.header-content {
-  width: 100%;
+.content {
   max-width: 1366px;
   height: 96px;
-
   margin: 0 auto;
+}
 
+.header-content {
+  width: 100%;
   display: flex;
   justify-content: space-between;
   align-items: center;
+  padding: 24px 0;
 }
 
 .header-logo {
@@ -74,7 +79,7 @@ body {
   color: var(--secondary-color);
 }
 
-.header-content-wrapper{
+.header-content-wrapper {
   display: flex;
   align-items: center;
 }
@@ -96,6 +101,88 @@ body {
   margin-right: 47px;
 }
 
-.btn-primary:hover{
+.btn-primary:hover {
   filter: brightness(0.9);
+}
+
+.hero {
+  margin-top: 64px;
+  display: flex;
+  justify-content: space-between;
+}
+
+.hero-headline {
+  width: 45%;
+}
+
+.hero-headline h2 {
+  font-style: normal;
+  font-weight: 700;
+  font-size: 64px;
+  line-height: 120%;
+  color: var(--black-dark);
+}
+
+.hero-headline p {
+  margin-top: 48px;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 18px;
+  line-height: 120%;
+  color: var(--gray-100);
+}
+
+.hero-headline p img {
+  margin-right: 8px;
+}
+
+.hero-image {
+  width: 45%;
+}
+
+.hero-image img {
+  width: 100%;
+}
+
+.hero-headline button {
+  border: none;
+  cursor: pointer;
+  border-radius: 15px;
+
+  font-style: normal;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 120%;
+
+  margin-top: 63px;
+}
+
+.buttons-wrapper{
+  display: flex;
+}
+
+.btn-primary-hero {
+  width: 164px;
+  height: 56px;
+  color: var(--tertiary-color);
+  background-color: var(--secondary-color);
+  margin-right: 32px;
+  transition: 0.5s ease;
+}
+
+.btn-primary-hero:hover {
+  filter: brightness(0.8);
+}
+
+.btn-secondary-hero {
+  background: transparent;
+  transition: 0.5s ease;
+  display: flex;
+  align-items: center;
+}
+
+.btn-secondary-hero::after{
+  content: url(/assets/images/arrow-up-right.svg);
+  width: 24px;
+  height: 24px;
 }
