--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -157,7 +157,7 @@ body {
   margin-top: 63px;
 }
 
-.buttons-wrapper{
+.buttons-wrapper {
   display: flex;
 }
 
@@ -181,8 +181,51 @@ body {
   align-items: center;
 }
 
-.btn-secondary-hero::after{
+.btn-secondary-hero::after {
   content: url(/assets/images/arrow-up-right.svg);
   width: 24px;
   height: 24px;
 }
+
+.hero-email {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.hero-email a {
+  text-decoration: none;
+  font-style: normal;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 19px;
+  color: var(--complementary-color);
+  writing-mode: vertical-lr;
+  margin-top: 136px;
+  position: relative;
+}
+
+.hero-email a:after {
+  content: url(/assets/images/line-email.svg);
+  display: block;
+  position: absolute;
+  left: 15%;
+  bottom: -91%;
+}
+
+.arrow{
+  display: flex;
+  justify-content: center;
+}
+
+.arrow img{
+  animation: animated-arrow 1s ease infinite alternate;
+}
+
+@keyframes animated-arrow{
+  to{
+    transform: translateY(-5px)
+  }
+}
+
+
