--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -4,6 +4,13 @@
   box-sizing: border-box;
 }
 
+@font-face {
+  font-family: "icomoon";
+  src: url(../font/icomoon.ttf.css);
+  src: url(../font/icomoon.eot.css#iefix) format("embedded-opentype"),
+    url(../font/icomoon.woff.css) format("woff");
+}
+
 body {
   font-family: "Raleway", sans-serif;
 }
@@ -18,6 +25,9 @@ body {
   --black-dark: #0a0909;
 
   --gray-100: #444444;
+  --gray-200: #2c2c2c;
+
+  --background-color: #fbfafa;
 }
 
 .container {
@@ -103,6 +113,20 @@ body {
 
 .btn-primary:hover {
   filter: brightness(0.9);
+}
+
+.icon-sun::after {
+  display: block;
+  content: "\e935";
+  font-family: "icomoon";
+  font-size: 32px;
+  color: var(--secondary-color);
+  cursor: pointer;
+  transition: 0.3s ease;
+}
+
+.icon-sun:hover::after {
+  color: var(--black-light);
 }
 
 .hero {
@@ -213,19 +237,124 @@ body {
   bottom: -91%;
 }
 
-.arrow{
+.arrow {
   display: flex;
   justify-content: center;
 }
 
-.arrow img{
+.arrow img {
   animation: animated-arrow 1s ease infinite alternate;
 }
 
-@keyframes animated-arrow{
-  to{
-    transform: translateY(-5px)
+@keyframes animated-arrow {
+  to {
+    transform: translateY(-5px);
   }
 }
 
+/*Skills*/
+.skills-content {
+  margin-top: 80px;
+}
 
+.skills-content h2 {
+  font-style: normal;
+  font-weight: 700;
+  font-size: 64px;
+  line-height: 120%;
+  color: var(--black-dark);
+}
+
+.skills-content .subtitle {
+  font-style: normal;
+  font-weight: 500;
+  font-size: 18px;
+  line-height: 120%;
+  color: var(--gray-200);
+
+  width: 53%;
+  margin-top: 40px;
+}
+
+.skills-content h3 {
+  font-style: normal;
+  font-weight: 700;
+  font-size: 40px;
+  line-height: 120%;
+
+  color: var(--tertiary-color);
+  margin-top: 72px;
+}
+
+.card-content{
+  display: flex;
+  justify-content: space-between;
+}
+
+.card {
+  width: 394px;
+  height: 196px;
+  background-color: var(--background-color);
+  padding: 0 38px 24px 38px;
+  margin-top: 40px;
+}
+
+.card-wrapper {
+  display: flex;
+  justify-content: space-between;
+}
+
+.car-icon {
+  background-color: var(--primary-color);
+  padding: 26px 15px;
+}
+
+.car-icon-figma::before {
+  font-family: "icomoon";
+  content: "\e917";
+  font-size: 32px;
+  color: var(--secondary-color);
+}
+
+.car-icon-star::before {
+  font-family: "icomoon";
+  content: "\e934";
+  font-size: 32px;
+  color: var(--secondary-color);
+}
+
+.car-icon-code::before {
+  font-family: "icomoon";
+  content: "\e90d";
+  font-size: 32px;
+  color: var(--secondary-color);
+}
+
+.card-icon-arrow::before {
+  display: inline-block;
+  font-family: "icomoon";
+  content: "\e902";
+  font-size: 24px;
+  color: var(--tertiary-color);
+  margin-top: 24px;
+  font-weight: bold;
+  cursor: pointer;
+}
+
+.card h4 {
+  margin-top: 14px;
+  font-style: normal;
+  font-weight: 600;
+  font-size: 24px;
+  line-height: 120%;
+  color: var(--tertiary-color);
+}
+
+.card p {
+  margin-top: 11px;
+  font-style: normal;
+  font-weight: 600;
+  font-size: 14px;
+  line-height: 120%;
+  color: var(--gray-10);
+}
