--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -26,6 +26,7 @@ body {
 
   --gray-100: #444444;
   --gray-200: #2c2c2c;
+  --gray-300: #a3a3a3;
 
   --background-color: #fbfafa;
 }
@@ -37,7 +38,6 @@ body {
 
 .content {
   max-width: 1366px;
-  height: 96px;
   margin: 0 auto;
 }
 
@@ -286,9 +286,10 @@ body {
   margin-top: 72px;
 }
 
-.card-content{
+.card-content {
   display: flex;
   justify-content: space-between;
+  margin-top: 40px;
 }
 
 .card {
@@ -296,7 +297,6 @@ body {
   height: 196px;
   background-color: var(--background-color);
   padding: 0 38px 24px 38px;
-  margin-top: 40px;
 }
 
 .card-wrapper {
@@ -357,4 +357,134 @@ body {
   font-size: 14px;
   line-height: 120%;
   color: var(--gray-10);
+}
+
+.card-experience {
+  width: 384px;
+  height: 346px;
+  background-color: var(--background-color);
+  padding: 37px 57px;
+}
+
+.card-experience-wrapper {
+  position: relative;
+}
+
+.card-experience-circle {
+  width: 29px;
+  height: 29px;
+  background-color: var(--primary-color);
+  border-radius: 50%;
+  opacity: 0.1;
+}
+
+.car-icon-monitor::before {
+  content: "\e92b";
+}
+
+.card-experience .car-icon-figma:before,
+.car-icon-monitor::before {
+  display: inline-block;
+  font-family: "icomoon";
+  font-size: 32px;
+  color: var(--primary-color);
+  position: absolute;
+  left: 4%;
+  top: -7px;
+  font-weight: 300;
+}
+
+.card-experience h4 {
+  font-style: normal;
+  font-weight: 800;
+  font-size: 24px;
+  line-height: 120%;
+  color: var(--tertiary-color);
+  margin-top: 40px;
+}
+
+.card-experience span {
+  display: block;
+  font-style: normal;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 120%;
+  color: var(--tertiary-color);
+  margin-top: 16px;
+}
+
+.card-experience p {
+  font-style: normal;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 120%;
+  color: var(--gray-100);
+  margin-top: 24px;
+}
+
+span.card-experience-date {
+  ont-style: normal;
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 120%;
+  color: var(--gray-100);
+}
+
+.portfolio-content {
+  margin-top: 80px;
+}
+
+.portfolio-content h2 {
+  font-style: normal;
+  font-weight: 700;
+  font-size: 64px;
+  line-height: 120%;
+  color: var(--black-dark);
+}
+
+.portfolio-content-item.flex{
+  margin-top: 40px;
+  display: flex;
+  justify-content: space-between;
+}
+
+.portfolio-content-item h3 {
+  font-style: normal;
+  font-weight: 700;
+  font-size: 24px;
+  line-height: 120%;
+  color: var(--gray-200);
+  margin-top: 32px;
+}
+
+.portfolio-content-item span {
+  display: block;
+  font-style: normal;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 120%;
+  color: var(--gray-300);
+  margin-top: 16px;
+}
+
+.portfolio-content-item .card-large {
+  width: 592px;
+}
+
+.portfolio-content-item .card-large img {
+  width: 100%;
+  height: auto;
+  max-height: 285px;
+  background-color: var(--background-color);
+}
+
+.portfolio-content-item .card-small {
+  width: 278px;
+}
+
+.portfolio-content-item .card-small img {
+  width: 100%;
+  height: 285px;
+
+  background-color: var(--background-color);
 }
